JUnit advanced Test and MockMvc Test